Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58145

Rectangle with negative dimensions is not drawn with QSvgGenerator

    XMLWordPrintable

Details

    Description

      When drawing a rectangle with negative height/width it doesn't get drawn to SVG. The same rectangle is drawn fine with QPainter.

      Steps to reproduce the issue:
      1. Run attached test application
      2. Click on "Save SVG to" button
      3. Compare the QPainter and QSvgGenerator output

      Expected outcome:
      Also the rectangle with negative height / width is drawn similarly as with QPainter

      Actual outcome:
      Rectangles with negative height / width are outputted to svg file as is without any normalisation. Therefore they are not visible with e.g. web browsers.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes