Fix svg generation for non-normalized rectangles

The raster engine accepts and renders non-normalized rectangles. Make
the svg paint engine do the same, instead of just ignoring them.

Task-number: QTBUG-58145
Change-Id: Ifa82fd580574bc908552efbb1eeace21bde76ed7
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 8ea914c667e3d021d6618915e694a4d8bed5fe9f)
Reviewed-by: Andy Shaw <andy.shaw@qt.io>